# shbr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_request.yml
.github/workflows/: ci.yml  release.yml
apps/menubar-macos/: Package.swift  README.md
apps/menubar-macos/Resources/: AppIcon.icns
apps/menubar-macos/Sources/SHawnBrain/: BrainFrames.swift  BrainIcon.swift  BrainModel.swift  ContentView.swift  SHawnBrainApp.swift  Snapshot.swift  Theme.swift
apps/menubar-macos/scripts/: make-app.sh  release.sh  render_app_icon.py  render_brain_frames.py
contrib/swiftbar/: shbr.10s.sh
docs/: PUBLIC_RELEASE_CHECKLIST.md
src/shbr/: __init__.py  browser.py  cache.py  cli.py  config.py  connectors.py  engine.py  model.py  sources.py  state.py  util.py
tests/: test_browser_connector_contract.py  test_cli_and_privacy.py  test_connector_parsers.py  test_multi_account_model.py  test_product_identity.py  test_swift_account_contract.py  test_swift_concurrency_contract.py  test_trust_boundary.py
