[project]
name = "shbr"
version = "0.1.0"
description = "Local-first, zero-instrumentation observability for CLI AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "SHawn Brain" }]
keywords = ["observability", "ai-agents", "cli", "tokens", "memory", "local-first"]
dependencies = []

[project.scripts]
shbr = "shbr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shbr"]
